[package]
name = "rezilion_project"
version = "0.1.0"
authors = ["tomdrc1 <tomdrc4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "*"
serde_json = "*"
sqlite = "*"
shiplift = "*"
tokio = "*"
walkdir = "*"